--- a/client/partials/newkid.html
+++ b/client/partials/newkid.html
@@ -53,8 +53,17 @@
 			<select ng-repeat="organisation in organisations">
 				<option ng-model="newKid.organisation" ng-bind="organisation.id"></option>
 			</select><br>
+		<label>Upload Picture </label>
+			    <input type='file' id="imgInp" name="imgInp"/>
+				<img id="image" src="" alt="your image" />
 
-		<button ng-click="addKid()">Add Kiddo</button>
+				<div id="imgList"></div>
+    				<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+
+        			<script src="js/upload.js"></script>
+        		</div>
+
+				<button ng-click="addKid()">Add Kiddo</button>
 
 
 	
