added chart to front end

--- a/client/partials/home.html
+++ b/client/partials/home.html
@@ -51,7 +51,7 @@ nav {
     background: white;
 }
 </style>
-<button class="randomize">randomize</button>
+<!-- <button class="randomize">randomize</button> -->
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
@@ -76,15 +76,16 @@ nav {
 </nav>
 <div class="text-center">
 <div class="btn-group" role="group">
-  <button type="button" class="btn btn-default" ng-click="year()">Yearly support</button>
-  <button type="button" class="btn btn-default">Age Distribution</button>
+  <button type="button" class="btn btn-default" ng-click="thirteen()">2013</button>
+  <button type="button" class="btn btn-default" ng-click="fourteen()">2014</button>
+  <button type="button" class="btn btn-default" ng-click="fifteen()">2015</button>
   <!-- <button type="button" class="btn btn-default">Right</button> -->
 </div>
 <div id="absolute">
     <div id="chart"></div>
 </div>
 <div class="kids">
-    <h1 class="text-center">Search</h1>
+    <h1 class="text-center">Kids Supported</h1>
 </div>
 <!-- Modal login -->
 <div class="modal fade" id="loginModalSponsor" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
