--- a/client/partials/home.html
+++ b/client/partials/home.html
@@ -100,7 +100,7 @@ nav {
           <label>Email</label>
           <input type="text" ng-model="orgLogin.email"><br>
           <label>Password</label>
-          <input type="text" ng-model="orgLogin.password">
+          <input type="password" ng-model="orgLogin.password">
         </form>
       </div>
       <div class="modal-footer">
@@ -136,7 +136,7 @@ nav {
           <label>Email</label>
           <input type="text" ng-model="organisation.email"><br>
           <label>Password</label>
-          <input type="text" ng-model="organisation.password"><br>
+          <input type="password" ng-model="organisation.password"><br>
           <label>Contact Number</label>
           <input type="text" ng-model="organisation.contact_number">
       </div>
