changed views and models

--- a/client/partials/home.html
+++ b/client/partials/home.html
@@ -145,6 +145,7 @@ nav {
       </div>
       <div class="modal-body">
         <form>
+    
           <label>Email</label>
           <input type="text" ng-model="orgLogin.email"><br>
           <label>Password</label>
@@ -168,25 +169,11 @@ nav {
       </div>
       <div class="modal-body">
           <label>Name</label>
-          <input type="text" ng-model="organisation.name"><br>
-          <label>Description</label>
-          <input type="text" ng-model="organisation.description"><br>
-          <label>Address</label>
-          <input type="text" ng-model="organisation.address"><br>
-          <label>City</label>
-          <input type="text" ng-model="organisation.city"><br>
-          <label>State</label>
-          <input type="text" ng-model="organisation.state"><br>
-          <label>Country</label>
-          <input type="text" ng-model="organisation.country"><br>
-          <label>Zipcode</label>
-          <input type="text" ng-model="organisation.zipcode"><br>
+          <input type="text" ng-model="sponsor.name"><br>
           <label>Email</label>
-          <input type="text" ng-model="organisation.email"><br>
+          <input type="text" ng-model="sponsor.email"><br>
           <label>Password</label>
-          <input type="password" ng-model="organisation.password"><br>
-          <label>Contact Number</label>
-          <input type="text" ng-model="organisation.contact_number">
+          <input type="password" ng-model="sponsor.password"><br>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
