finished the front end design

--- a/client/partials/home.html
+++ b/client/partials/home.html
@@ -167,10 +167,12 @@ path.area {
 		<div class="col-md-4">
 			<img src="./assets/19f9cefdfb07230a68581d617885a3af_XS.jpg">
 			<h3>Palani</h3>
+			<h5 class="kidsDescription">Lives with his father and 1 sister. His parents strugle to provide for the family. His father is a fisherman. Despite his efforts its difficult to meet the family's needs. He is growing up in a poor community in India. A typical home is constructed using wood wit ha thatch roof and dirt floor</h5>
 		</div>
 		<div class="col-md-4">
 			<img src="./assets/imageedit_2_2465428479.jpg">
 			<h3>Mala</h3>
+			<h5 class="kidsDescription">She lives with her parents and her parents struggle to provide for the family. His father is a daily wage earner and her mother is a daily wage earner. Your sponsor helps provide her with the education and tutoring that will help her excel in life.</h5>
 		</div>
 	</div>
 	<div class="row messageText">
